Fix footer menu padding on mobile

--- a/resources/sass/frontend/chunks/_footer.scss
+++ b/resources/sass/frontend/chunks/_footer.scss
@@ -53,7 +53,7 @@
   &_nav {
 
     margin-bottom: 16px;
-    padding-left: 15px;
+    padding-left: 32px;
 
 
     height: auto;
@@ -90,7 +90,7 @@
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    padding-left: 63px;
+    padding-left: 80px;
     margin-bottom: 20px;
     height: auto;
 
